--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-react-parser": "^5.1.10",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mysql2": "^3.10.1",
     "nodemailer": "^6.9.15",
     "number-to-words": "^1.2.4",
